# libqiniu

./: .gitignore  CHANGELOG  CMakeLists.txt  FEATURES  TODO
demo/: CMakeLists.txt  qacctoken.c  qbatch_stat.c  qcdnurl.c  qchgm.c  qcopy.c  qdelete.c  qdnurl.c  qeputf.c  qfetch.c  qlist.c  qmove.c  qput.c  qputa.c  qputf.c  qputfa.c  qputfb.c  qregion.c  qrput.c  qrputf.c  qstat.c  qstat_batch.c  quphf.c
doc/: doxygen.cfg
helper/: func_callgraph.pl
man/man3/: qn_easy_put_file.3  qn_stor_create.3  qn_stor_destroy.3  qn_stor_get_array_body.3  qn_stor_get_object_body.3  qn_stor_put_buffer.3  qn_stor_put_file.3  qn_stor_upload_buffer.3  qn_stor_upload_file.3
src/: auth.c  auth.h
src/base/: base64.c  base64.h  basic_types.h  errors.c  errors.h  json.c  json.h  json_formatter.c  json_formatter.h  json_parser.c  json_parser.h  string.c  string.h
src/base/ds/: dqueue.c  dqueue.h  edlink.h  eslink.h
src/qiniu/: auth.c  auth.h  cdn.c  cdn.h  easy.c  easy.h  etag.c  etag.h  http.c  http.h  http_header.c  http_header.h  http_header_parser.c  http_header_parser.h  http_query.c  http_query.h  log.c  log.h  macros.h  misc.c  misc.h  reader.c  reader.h  reader_filter.c  reader_filter.h  region.c  region.h  service.c  service.h  storage.c  storage.h  upload.h  version.c  version.h
src/qiniu/base/: base64.c  base64.h  basic_types.h  errors.c  errors.h  io.c  io.h  json.c  json.h  json_formatter.c  json_formatter.h  json_parser.c  json_parser.h  misc.c  misc.h  string.c  string.h
src/qiniu/base/ds/: dqueue.c  dqueue.h  etable.c  etable.h
src/qiniu/ds/: byte_buffer.c  byte_buffer.h  dqueue.c  dqueue.h  eslink.h  etable.c  etable.h
src/qiniu/os/: file.c  file.h  linux_file.c  linux_time.c  linux_types.h  time.h  types.h  types_conv.c  types_conv.h
src/qiniu/ud/: variable.c  variable.h
test/: CMakeLists.txt  test_cdn.c  test_etag.c  test_http_header.c  test_json.c  test_string.c
